se corrigio la consulta getJefesCarreraFilteredByIdJefeCarreraInCarreras y se agrego un cascade merge en para los docentes

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: postgres
-    password:
+    password: postgres
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/course_selector_db?serverTimezone=UTC
   jpa:
